Test Filtering System

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -390,7 +390,7 @@ section.mastwrap{
 
 /*WORKS*/
 
-/* .filter-trigger-wrap{
+ .filter-trigger-wrap{
   display: block;
   position: fixed;
   width: 30px;
@@ -453,7 +453,7 @@ left: 8%;}
   margin-left: 10px;
   margin-right: 10px;
 }
-*/
+
 
 .works-container{
     padding: 0;
