--- a/less/color.less
+++ b/less/color.less
@@ -129,10 +129,10 @@ body {
 }
 
 /* BORDER STYLES */
-.newborder {
+/* .newborder {
   border-left: 1px solid @brown;
   border-right: 1px solid @brown;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
 
 .imgborder {
@@ -145,13 +145,13 @@ body {
 	border: 1px solid @brown;
 }
 
-footer.mastfoot.footerborder{
+/*footer.mastfoot.footerborder{
 	border-top: 1px solid @brown;
 }
 
 header.masthead.headerborder{ 
 	border-bottom: 1px solid @brown;
-}
+}*/
 
 
 /* HEADER/WRAPPER COLORS */
