--- a/less/color.less
+++ b/less/color.less
@@ -142,16 +142,16 @@ body {
 	box-shadow: 0px 4px 14px -4px rgba(0,0,0,0.6);
 }
 .homeimgborder {
-	border: 1px solid @brown;
+	border: 0px solid @brown;
 }
 
-/*footer.mastfoot.footerborder{
-	border-top: 1px solid @brown;
+footer.mastfoot.footerborder{
+	border-top: 0px solid @brown;
 }
 
 header.masthead.headerborder{ 
-	border-bottom: 1px solid @brown;
-}*/
+	border-bottom: 0px solid @brown;
+}
 
 
 /* HEADER/WRAPPER COLORS */
@@ -335,7 +335,7 @@ input:focus, textarea:focus {
 } */
 
 /* FILTER/FOOTER COLORS */
-/* .works-filter li a, .works-filter li:after{
+.works-filter li a, .works-filter li:after{
 	color: @dark;
 }
 
@@ -363,7 +363,7 @@ input:focus, textarea:focus {
 }
 .foot-social li a > img:hover {
 	color: @orange;
-} */
+} 
 
 /* NAVIGATION COLORS */
 /* .menu-bg{
