--- a/less/color.less
+++ b/less/color.less
@@ -129,14 +129,14 @@ body {
 }
 
 /* BORDER STYLES */
-/* .newborder {
-  border-left: 1px solid @brown;
-  border-right: 1px solid @brown;
+ .newborder {
+  border-left: 0px solid @brown;
+  border-right: 0px solid @brown;
   min-height: 100vh; */
 }
 
 .imgborder {
-	border: 1px solid @brown;
+	border: 0px solid @brown;
 }
 .imgshadow {
 	box-shadow: 0px 4px 14px -4px rgba(0,0,0,0.6);
