Less Fixes & Add'l Fixes

--- a/less/color.less
+++ b/less/color.less
@@ -132,7 +132,7 @@ body {
  .newborder {
   border-left: 0px solid @brown;
   border-right: 0px solid @brown;
-  min-height: 100vh; */
+  min-height: 100vh;
 }
 
 .imgborder {
