--- a/less/color.less
+++ b/less/color.less
@@ -1,31 +1,5 @@
-
 /* COLORS */
-@white: #FFFFFF;
-@cloud:#FFFDFC;
-@wheat: #ceba9f;
-@brown: #402615;
-@black: #24140b;
-@grey: #cccccc;
-
-
-@red: #b54936;
-@purple: #9966FF;
-@yellow: #FFFD89;
-
-@cobalt: #0e34c3;
-@softblue: #a2b3d6;
-@denim: #464c64;
-
-@algae: #959342;
-@dustygreen: #78917c;
-@army: #3b5007;
-@lightgreen: #7ea37b;
-
-@dialuppink: #ffadc6;
-@dialupblue: #10c0ff;
-
 /* GRADIENTS */
-
 /* v2 COLORS
 @dialuppink: #ffadc6;
 @dialupblue: #10c0ff;
@@ -48,7 +22,6 @@
 @blinkblue: #0e34c3;
 @brown: #402615;
 */
-
 /* ORIGINAL COLORS 
 @white: #FFFFFF;
 @silver: #F8F8F8;
@@ -70,90 +43,125 @@
 @scangrey: #5f7171;
 @cloud: #ECE9E6;
 @brown: #1b1a1a; */
-
-
 /* COLOR CLASSES */
-.white {color: #FFFFFF;}
-.cloud{color: #FFFDFC;}
-.wheat {color: #ceba9f;}
-.brown {color: #402615;}
-.black {color: #24140b;}
-.grey {color: #cccccc;}
-.red {color: #b54936;}
-.purple {color: #9966FF;}
-.yellow {color: #FFFD89;}
-.cobalt {color: #0e34c3;}
-.softblue {color: #a2b3d6;}
-.denim {color: #464c64;}
-.algae {color: #959342;}
-.dustygreen {color: #78917c;}
-.army {color: #3b5007;}
-.lightgreen {color: #7ea37b;}
-.dialuppink {color: #ffadc6;}
-.dialupblue {color: #10c0ff;}
-
+.white {
+  color: #FFFFFF;
+}
+.cloud {
+  color: #FFFDFC;
+}
+.wheat {
+  color: #ceba9f;
+}
+.brown {
+  color: #402615;
+}
+.black {
+  color: #24140b;
+}
+.grey {
+  color: #cccccc;
+}
+.red {
+  color: #b54936;
+}
+.purple {
+  color: #9966FF;
+}
+.yellow {
+  color: #FFFD89;
+}
+.cobalt {
+  color: #0e34c3;
+}
+.softblue {
+  color: #a2b3d6;
+}
+.denim {
+  color: #464c64;
+}
+.algae {
+  color: #959342;
+}
+.dustygreen {
+  color: #78917c;
+}
+.army {
+  color: #3b5007;
+}
+.lightgreen {
+  color: #7ea37b;
+}
+.dialuppink {
+  color: #ffadc6;
+}
+.dialupblue {
+  color: #10c0ff;
+}
 /* BACKGROUND COLORS */
 body {
-	background-color: @cloud;
+  background-color: #FFFDFC;
 }
-
 /* CLOUDS GRADIENT */
 .wheatgrd {
-	background: @cloud;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to bottom, @cloud, @wheat);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to bottom, @cloud, @wheat); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	z-index: 0;
+  background: #FFFDFC;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #FFFDFC, #ceba9f);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #FFFDFC, #ceba9f);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  z-index: 0;
 }
-
 .greengrd {
-	background: @cloud;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to bottom, @cloud, @lightgreen);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to bottom, @cloud, @lightgreen); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	z-index: 0;
+  background: #FFFDFC;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #FFFDFC, #7ea37b);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #FFFDFC, #7ea37b);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  z-index: 0;
 }
-
 .bluegrd {
-	background: @cloud;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to bottom, @cloud, @softblue);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to bottom, @cloud, @softblue); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	z-index: 0;
+  background: #FFFDFC;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #FFFDFC, #a2b3d6);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #FFFDFC, #a2b3d6);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  z-index: 0;
 }
-
 .greygrd {
-	background: @cloud;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to bottom, @cloud, @grey);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to bottom, @cloud, @grey); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	z-index: 0;
-	width: 100vw;
-	height: 100vh;
+  background: #FFFDFC;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #FFFDFC, #cccccc);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #FFFDFC, #cccccc);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  z-index: 0;
+  width: 100vw;
+  height: 100vh;
 }
-
 /* BORDER STYLES */
- .newborder {
-  border-left: 0px solid @brown;
-  border-right: 0px solid @brown;
+.newborder {
+  border-left: 0px solid #402615;
+  border-right: 0px solid #402615;
   min-height: 100vh;
 }
-
 .imgborder {
-	border: 0px solid @brown;
+  border: 0px solid #402615;
 }
 .imgshadow {
-	box-shadow: 0px 4px 14px -4px rgba(0,0,0,0.6);
+  box-shadow: 0px 4px 14px -4px rgba(0, 0, 0, 0.6);
 }
 .homeimgborder {
-	border: 0px solid @brown;
+  border: 0px solid #402615;
 }
-
-footer.mastfoot.footerborder{
-	border-top: 0px solid @brown;
+footer.mastfoot.footerborder {
+  border-top: 0px solid #402615;
 }
-
-header.masthead.headerborder{ 
-	border-bottom: 0px solid @brown;
+header.masthead.headerborder {
+  border-bottom: 0px solid #402615;
 }
-
-
 /* HEADER/WRAPPER COLORS */
 /*section.mastwrap{
 	border-color: @white;
@@ -168,159 +176,128 @@ header.masthead{
 footer.mastfoot.white-bg {
 	background-color: white;
 }*/
-
 header.masthead.hint-bg {
-	background-color: rgba(255,253,252,0.8);
+  background-color: rgba(255, 253, 252, 0.8);
 }
-
-
 /* TEXT COLORS */
-
-p,h1,h2,h3,h4,h5,h6 {
-	color: @brown;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #402615;
 }
-
-a{
-	color: @cobalt;
-	cursor: url("../images/view.png") 40 40, crosshair;
+a {
+  color: #0e34c3;
+  cursor: url("../images/view.png") 40 40, crosshair;
 }
-
-a:hover{
-	color: @brown;
-	text-decoration: underline;
-	text-decoration-style: wavy;
-	text-decoration-color: @brown;
+a:hover {
+  color: #402615;
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: #402615;
 }
-
 header a.active {
-	color: @brown;
-	text-decoration: underline;
-	text-decoration-style: wavy;
-	text-decoration-color: @brown;
+  color: #402615;
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: #402615;
 }
-
 header a {
-	color: @brown;
+  color: #402615;
 }
-
 header a:hover {
-	color: @brown;
-	text-decoration: underline;
-	text-decoration-style: wavy;
-	text-decoration-color: @brown;
+  color: #402615;
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: #402615;
 }
-
-header a.active:hover {
+.backtowork a:hover {
+  color: #402615;
 }
-
-.backtowork a:hover{
-	color: @brown;
-}
-
 .seealso a:hover {
-	text-decoration: none;
-	color: @brown;
+  text-decoration: none;
+  color: #402615;
 }
-
-
 /* SELECTION COLORS */
 ::selection {
-  background: @army;
-  color: @cloud;
+  background: #3b5007;
+  color: #FFFDFC;
 }
 ::-moz-selection {
-  background: @army;
-  color: @cloud;
+  background: #3b5007;
+  color: #FFFDFC;
 }
-
-
-
-
-
-
 /* WORKS ITEM COLORS */
-.featured-work-caption > span:before{
-	/* background-color: @yellow; */
+.featured-work-caption > span:before {
+  /* background-color: @yellow; */
 }
 .works-item:hover {
-	/* background-color: @white; */
-
+  /* background-color: @white; */
 }
- .works-item-inner h3 > span{ 
-	/* border-color: @yellow; */
+.works-item-inner h3 > span {
+  /* border-color: @yellow; */
 }
-.projectpage .ContentWrapperB .ContentB{
-	/* background-color: rgba(255, 255, 255, 0.3); */
+.projectpage .ContentWrapperB .ContentB {
+  /* background-color: rgba(255, 255, 255, 0.3); */
 }
-.projectpage .ContentWrapperB .ContentB{
-	/* background-color: rgba(255, 255, 255, 0.3); */
+.projectpage .ContentWrapperB .ContentB {
+  /* background-color: rgba(255, 255, 255, 0.3); */
 }
-
 .works-item a:hover {
-	color: @brown;
-	text-decoration: underline;
-	text-decoration-style: wavy;
-	text-decoration-color: @brown;
+  color: #402615;
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: #402615;
 }
-
-
-
-
-
 /* TSULA COLORS*/
 .menu--tsula .menu__item .menu__item-name::before {
-	background: @lightgreen;
+  background: #7ea37b;
 }
-
 /* TSULA COLORS ON HOMEPAGE */
 .newhomepage .menu--tsula .menu__item-name {
-	color: @brown;
-	/*text-shadow: 1px 1px 10px;*/
+  color: #402615;
+  /*text-shadow: 1px 1px 10px;*/
 }
 .newhomepage .menu--tsula .menu__item-label {
-	color: @brown;
-	/*text-shadow: 1px 1px 10px;*/
+  color: #402615;
+  /*text-shadow: 1px 1px 10px;*/
 }
-
 .newhomepage .menu--tsula .menu__item:hover .menu__item-name,
 .menu--tsula .menu__item:focus .menu__item-name {
-	color: @brown;
+  color: #402615;
 }
 .newhomepage .menu--tsula .menu__item:hover .menu__item-label,
 .menu--tsula .menu__item:focus .menu__item-label {
-	color: @cloud;
-	background: @army;
+  color: #FFFDFC;
+  background: #3b5007;
 }
-
 /*body#homebody #trigger:hover  {
 	background: @cloud;  /* fallback for old browsers 
 	background: -webkit-linear-gradient(to bottom, @cloud, @softblue);  /* Chrome 10-25, Safari 5.1-6 
 	background: linear-gradient(to bottom, @cloud, @softblue); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ 
 	z-index: 0;
 } */
-
-
 /* TSULA COLORS ON ABOUT, WORK PAGE */
 .about .menu--tsula .menu__item-name {
-	color: @brown;
-	text-decoration: none;
+  color: #402615;
+  text-decoration: none;
 }
 .about .menu--tsula .menu__item:hover .menu__item-name,
 .about .menu--tsula .menu__item:focus .menu__item-name {
-	color: @cloud;
-	background: @army;
-	text-decoration: none;
+  color: #FFFDFC;
+  background: #3b5007;
+  text-decoration: none;
 }
 .about .menu--tsula .menu__item:hover .menu__item-label,
 .about .menu--tsula .menu__item:focus .menu__item-label {
-	color: @brown;
+  color: #402615;
 }
 .about .menu--tsula .menu__item-label {
-	color: @cloud;
+  color: #FFFDFC;
 }
-
-
-
 /* OTHER COLORS */
 /* input, textarea {
 	border-color: @white;
@@ -333,38 +310,24 @@ input:focus, textarea:focus {
 .sub-menu{
 	border-color: @red;
 } */
-
 /* FILTER/FOOTER COLORS */
-.works-filter li a, .works-filter li:after{
-	color: @dark;
+.works-filter li a:hover {
+  text-decoration-line: underline;
+  text-decoration-style: wavy;
 }
-
-.works-filter li a:hover{
-	text-decoration-line: underline;
-	text-decoration-style: wavy;
+.works-filter li a.active {
+  text-decoration-line: underline;
+  text-decoration-style: wavy;
 }
-
-.works-filter li a.active{
-	text-decoration-line: underline;
-	text-decoration-style: wavy;
+.agency-tile h6:after {
+  background-color: #b54936;
 }
-
-.filter-notification a{
-	color: @dark;
+.team-social a:hover span {
+  color: #b54936;
 }
-.agency-tile h6:after{
-	background-color: @red;
+.filter-notification {
+  background-color: #FFFFFF;
 }
-.team-social a:hover span{
-	color: @red;
-}
-.filter-notification{
-	background-color: @white;
-}
-.foot-social li a > img:hover {
-	color: @orange;
-} 
-
 /* NAVIGATION COLORS */
 /* .menu-bg{
 	background-color: @black;
@@ -375,7 +338,6 @@ input:focus, textarea:focus {
 .menu-panel ul li a:hover{
 	color: @red;
 } */
-
 /* BUTTON COLORS */
 /* .btn-remark-white {
 	background-color: @white;
