--- a/less/color.less
+++ b/less/color.less
@@ -201,9 +201,7 @@ a:hover {
 }
 header a.active {
   color: #402615;
-  text-decoration: underline;
-  text-decoration-style: wavy;
-  text-decoration-color: #402615;
+  text-decoration: none;
 }
 header a {
   color: #402615;
@@ -211,7 +209,7 @@ header a {
 header a:hover {
   color: #402615;
   text-decoration: underline;
-  text-decoration-style: wavy;
+  /*text-decoration-style: wavy;*/
   text-decoration-color: #402615;
 }
 .backtowork a:hover {
