--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -129,7 +129,6 @@ header.masthead{
   z-index: 9990;
   height: 40px;
   font-size: 26px;
-  word-spacing: 20px;
   text-transform: lowercase; 
   -webkit-transition: all .8s linear;
      -moz-transition: all .8s linear;
@@ -141,7 +140,7 @@ header.masthead{
 /* 3. Footer
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 footer.mastfoot{
-  height: 40px;
+  height: 80px;
   width: 100%;
   position: fixed;
   bottom: 0;
@@ -429,6 +428,7 @@ section.mastwrap{
   width: 100%;  
   z-index: 9990;
   position: absolute;
+  margin-top: -55px;
 }
 
 .works-container div:nth-child(2) {
@@ -443,8 +443,8 @@ section.mastwrap{
   display: inline-block;
 }
 .works-filter li a{
-  font-size: 15.5px;
-  line-height: 21px;
+  font-size: 24px;
+  line-height: 24px;
 }
 .works-filter li:after{
   content: ' ';
