--- a/less/fonts.less
+++ b/less/fonts.less
@@ -1,5 +1,5 @@
 
-@font1: 'baroque-text-jf', sans-serif;
+@font1: 'ff-brokenscript-web', serif;
 @font2: 'novel-mono-pro', sans-serif;
 @font3: 'Libre Barcode 128 Text', cursive;
 
@@ -8,7 +8,7 @@
 .font1{
 	font-family:@font1;
 	font-style: normal;	
-	font-weight: 400;
+	font-weight: 700;
 	text-transform: lowercase;
 }
 
