--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -90,11 +90,15 @@ div#preloader.fluidview {
     position: fixed;
     left: 50%;
     top: 50%;
-    background-image: url(../images/teah/green_loader_face_t.gif);
+    background-image: url(../images/sexypasta.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 150px;
     margin: -100px 0 0 -100px;
+    transform: rotate(360deg);
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
 }
 
 
