--- a/less/fonts.less
+++ b/less/fonts.less
@@ -82,7 +82,13 @@ nav a, header a {
 
 .bigletters {
   font-size: 80px;
-  text-transform: uppercase;
+  text-transform: lowercase;
+  font-family: @font3;
+}
+
+.medletters {
+  font-size: 50px;
+  text-transform: lowercase;
   font-family: @font1;
 }
 
