--- a/less/color.less
+++ b/less/color.less
@@ -184,7 +184,7 @@ p,h1,h2,h3,h4,h5,h6, a {
   color: #402615;
 }
 a, a:focus, a:hover {
-  cursor: url("../images/view.png") 40 40, crosshair;
+  cursor: url("../images/view.png") 40 40, crosshair !important;
 }
 a:hover {
   color: #1ecc0a;
@@ -201,7 +201,7 @@ header a {
 }
 header a:hover {
   color: #1ecc0a;
-  'text-decoration:none;
+  text-decoration:none;
   /*text-decoration-style: wavy;
   text-decoration-color: #402615;*/
 }
@@ -354,3 +354,5 @@ input:focus, textarea:focus {
 	background-color: @yellow !important;
 	color: @black !important;
 } */
+
+
