--- a/less/fonts.less
+++ b/less/fonts.less
@@ -97,3 +97,11 @@ nav a, header a {
 	text-transform: uppercase;
 	font-family: @font1;
 }
+
+.projectpage {
+	font-size: 50px;
+}
+
+.menutitle {
+  font-size: 60px;
+}
