--- a/stylesheets/venobox.css
+++ b/stylesheets/venobox.css
@@ -40,7 +40,7 @@ body{
     top:50%; 
     margin-left:-16px; 
     margin-top:-16px;
-    background-image: url(../images/teah/green_loader_face_t.gif);
+    background-image: url(../images/sexypasta.gif);
     text-indent: -100px;
     overflow: hidden;
     /* -webkit-animation: playload 1.4s steps(18) infinite;
