Test Marble/Paper Backgrounds

--- a/less/color.less
+++ b/less/color.less
@@ -141,6 +141,14 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
+.marblegrd {
+	background-image: url('images/marble.jpg');
+}
+
+.papergrd {
+	background-image: url('images/paper.jpg');
+}
 /* BORDER STYLES */
 .newborder {
   border-left: 0px solid #402615;
