--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -437,7 +437,7 @@ section.mastwrap{
   width: 100%;  
   z-index: 9990;
   position: absolute;
-  margin-top: 10%;
+  margin-top: -100px;
 }
 
 .works-container div:nth-child(2) {
@@ -597,7 +597,7 @@ section.mastwrap{
 .img-responsive {
   margin-left: auto;
   margin-right: auto;
-  min-width: 30vw;
+  min-width: 20vw;
   width: 100%;
   max-width: 80vw;
 }
