--- a/less/color.less
+++ b/less/color.less
@@ -150,7 +150,7 @@ body {
   min-height: 100vh;
 }
 .imgborder {
-  border: 0px solid #402615;
+  border: 1px solid black;
 }
 .imgshadow {
   box-shadow: 0px 4px 14px -4px rgba(0, 0, 0, 0.6);
@@ -183,8 +183,13 @@ header.masthead.hint-bg {
 }
 /* TEXT COLORS */
 p,h1,h2,h3,h4,h5,h6, a {
-  color: #402615;
+  color: #0f0f0f;
 }
+
+a.speciala {
+  color: #1ecc0a;
+  }
+
 a, a:focus, a:hover {
   cursor: url("../images/view.png") 40 40, crosshair !important;
 }
@@ -357,4 +362,10 @@ input:focus, textarea:focus {
 	color: @black !important;
 } */
 
+.headergrd {
+    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+}
 
+.footergrd {
+  background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+}
