--- a/less/color.less
+++ b/less/color.less
@@ -150,7 +150,8 @@ body {
   min-height: 100vh;
 }
 .imgborder {
-  border: 1px solid black;
+  border: 0px solid black;
+  border-radius: 5px;
 }
 .imgshadow {
   box-shadow: 0px 4px 14px -4px rgba(0, 0, 0, 0.6);
@@ -200,11 +201,11 @@ a:hover {
   text-decoration-color: #402615;*/
 }
 header a.active {
-  color: #402615;
+  color: #0f0f0f;
   text-decoration: none;
 }
 header a {
-  color: #402615;
+  color: #0f0f0f;
 }
 header a:hover {
   color: #1ecc0a;
@@ -221,11 +222,11 @@ header a:hover {
 }
 /* SELECTION COLORS */
 ::selection {
-  background: #3b5007;
+  background: #0f0f0f;
   color: #FFFDFC;
 }
 ::-moz-selection {
-  background: #3b5007;
+  background: ;
   color: #FFFDFC;
 }
 /* WORKS ITEM COLORS */
